Adds reading notes.

--- a/note/...2018_handy_notes.md
+++ b/note/...2018_handy_notes.md
@@ -5,6 +5,11 @@ date      : 2018-01-01
 
 
 ## 散记
+Not everything that counts can be counted, and not everything that's counted truly counts.  
+不是所有有价值的事物都可以被计算，也不是所有可计算的事物都值得去计算。  
+能被計算的，不一定重要；重要的事，不一定能被計算
+    -- 爱因斯坦
+
 “自己”这个东西是看不见的，撞上一些别的什么，反弹回来，才会了解“自己”。
 所以，跟很强的东西、可怕的东西、水准很高的东西相碰撞，然后才知道“自己”是什么，这才是自我。
     -- 山本耀司（日本设计大师）
