Adds reading notes.

--- a/note/...column_5分钟商学院_实战.md
+++ b/note/...column_5分钟商学院_实战.md
@@ -5,6 +5,10 @@
 --------------------------------------------------------------------------------
 
 
+## 2018-06-16 该如何梳理全国加盟市场？
+正确的方法应该是从经验到方法论，再从方法论到流程。
+
+
 ## 2018-05-24 资本杠杆：“走开走开，放着我来”式的贝恩模式，为什么能成功？
 如果你真的对你的能力内核有巨大信心，觉得它是坚实可复制的，那你可以选择创业。创业的本质，就是“收购你自己”，然后借助资本的力量，复制放大你的能力。
 
