--- a/note/...column_吴军的谷歌方法论.md
+++ b/note/...column_吴军的谷歌方法论.md
@@ -4,6 +4,10 @@
 --------------------------------------------------------------------------------
 
 
+## 2018-06-05 分享利益、独立决断
+利益要分享，但是很多时候作决策自己一个人作就好了，未必都需要民主集中，征求所有人的意见。
+
+
 ## 2018-03-22 以正合，以奇胜——乐观主义者的做事方法
 作战，先要把正面的兵排好，要排得不偏斜，合乎法则，这叫做正。如果这时你还有多余的兵力，你就赢了。以后很多人把这句话理解为出奇制胜，那是以今天汉语的字意理解当时的语言。
 历史上真正出奇制胜的战役很少，那些写进历史教科书的会战，常常是因为一方善于调动兵力，自己还能掌握多余的机动兵力，最后获胜。拿破仑在他最辉煌的奥斯特里茨战役中，就是靠巧妙地调动兵力，当双方都处于胶着状态时，他手下还有贝尔纳多特的一支完整的军队
