--- a/note/...column_精英日课_第二季.md
+++ b/note/...column_精英日课_第二季.md
@@ -4,6 +4,61 @@
 --------------------------------------------------------------------------------
 
 
+## 2018-06-30 答读者问 | 数量级变了，逻辑就不一样
+足球是一个防守比进攻容易的项目。破坏总比建设容易。进攻需要更快的速度、更高的技艺、以及“灵气”，而防守在很大程度上是本能的反应。好的防守球员很多，所以中上游球队的防守水平其实都挺好，那么决定成绩的就是进攻。好前锋更少，所以好前锋更贵。
+总而言之，防守决定下限，进攻决定上限。例行公事是必需品，神来之笔是奢侈品。奢侈品的使用价值未必比必需品高，但是奢侈品绝对更贵。
+其实人生也是这样啊！只要一个人不犯低级错误、兢兢业业地努力工作，保质保量地完成任务，他的生活就绝对不会差到哪去。但是如果他想出类拔萃，那光靠防守就不行了，他必须得会做一些出乎意料的事情。
+
+
+## 2018-06-11 《为什么》4：贝叶斯的方法
+卡尔·萨根讲过一句话，“超乎寻常的论断需要超乎寻常的证据。”
+
+
+## 2018-06-08 特别放送 | 关于学习的15个真相
+间隔学习
+所谓学习，就是把进入到大脑的短期工作记忆的内容强化吸收，写进长期工作记忆之中的过程。
+所谓创新，就是把长期工作记忆中的相关内容调出来，放在短期工作记忆里跟新信息形成配合的过程。
+
+该学文科还是理科
+首先取决于你喜欢什么。其次你要考虑到数学和物理这些东西涉及到人脑的所谓“流体智力”，说白了就是要求你的计算速度特别快 —— 而“流体智力”在二三十岁左右开始就要走下坡路了。所以学数学、物理就跟学踢足球一样，必须从小就下功夫，别等到30岁了才想起来学 — 并不是没有成功的例子，但比较罕见，而且肯定比从小就学费力。
+反过来说，历史、政治、文学、哲学这些东西，比较讲究知识的沉淀，更多的是依靠大脑的“晶体智力”。晶体智力不容易随年龄退化，稍晚一点再学也来得及。
+
+
+## 2018-06-07 正确的学习方法只有一种风格
+说到这里我就想起尼尔·波兹曼的《娱乐至死》。这本书是上世纪八十年代出版的，那时候还没有“刻意练习”这个词，但是波兹曼的论述正好说到了点子上，简直振聋发聩。
+波兹曼说，从来没有任何一位先贤说应该寓教于乐。教育哲学家从来都认为获得知识是一件困难的事情，学习是要付出代价的，耐力和汗水不可少。
+波兹曼说，教育的目的，本来应该是摆脱现实的奴役！要想获得出色的思辨能力，对年轻人来说绝非易事，这是异常艰苦卓绝的斗争。
+关键词是斗争。学习是一场斗争。这个知识你不懂，这个技能你不会，这个现实你改变不了，那你怎么办？你得斗争啊！你以为看个电视纪录片、看个科幻电影、听一段故事掉几滴眼泪就算斗争了吗？
+
+
+## 2018-06-05 《为什么》2：总有一种力量让我们回归平均
+Reason 和 Cause
+说到这儿我想辨析两个英文单词，“reason”和“cause”。这两个词的意思差不多都是原因，但是你细品的话，它们有重大区别。
+所谓 reason，是说对这件事的解释。比如你问我某个电影的续集为什么票房不高，我说这是回归平均，这个事儿有一个解释。
+而 cause，则是导致这件事的另一件事。你现在为什么感到有点饿，因为你没吃早饭。Cause 就是“因果关系”里面那个“因”
+
+
+## 2018-06-04 《为什么》1：洞见因果的三种思维
+三级因果思维
+
+第一级思维叫“观察”，是通过数据分析做出预测。
+你的生活经验表明下雨会把衣服淋湿，所以下次下雨你最好打伞，这就是观察思维。观察是寻找变量之间的相关性，观察就是积累经验。
+现在所有实用 AI 技术都是基于这个第一级思维。AlphaGo 下围棋，并不是它理解这步棋有什么用，它只不过知道走这步赢棋的概率会更大。
+
+第二级思维叫“干预”，是预判一个行动的结果。
+干预，是说如果我现在把牙膏的价格给提高一倍，对牙线的销量会有什么影响？
+
+第三级思维叫“想象”，是对以前发生的事儿的反思。
+第三级思维问的问题是，如果我当时是那么做的话，现在会是一个什么样的结果？
+你问的是一个从来没发生过的事情。这叫反事实（counterfactual）分析。如果纳粹德国抢先一步发明原子弹，现在的世界会是什么样的？这件事儿在历史上并有没有发生，你积累的大数据好像用不上啊。
+很多人爱说一句话，叫“历史不容假设” —— 这句话是错的。正是因为我们会假设，我们能想象不一样的可能性，我们才是高级动物。
+
+因果思维有三个级别。
+第一级是观测，你要处理的是已经观测到的世界。
+第二级是干预，你要处理一个可以被观测的新世界。
+第三级是想象，你要处理一个不可被观测的、你想象中的世界。
+
+
 ## 2018-05-31 一个对收入差距增大的物理学解释
 所谓财富，就是东西的流动。 那么如何创造更具流动性的东西？
 
